Downgrade to Java 8 compatibility
- pom.xml: source/target 11 -> 8, logback 1.4 -> 1.2, slf4j 2.0 -> 1.7
- AppConfig: isBlank() -> trim().isEmpty()

https://claude.ai/code/session_01QxdMMc7yLsQhf3dmULqKXf